<resources>
    <string name="app_name">Journey</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="usernameEdit">Username</string>
    <string name="password">Password</string>
    <string name="passwordEdit">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="loginButton">Login</string>
    <string name="newUser">New User ?</string>
    <string name="loginSuccessful">Login Successful</string>
    <string name="invalidLogin">Invalid username or password</string>
    <string name="signUpButton">Sign Up</string>
    <string name="signUp">Sign Up</string>
    <string name="fullName">Full name</string>
    <string name="fullNameEdit">Full name</string>
    <string name="emailID">Email-ID</string>
    <string name="emailIDEdit">Email ID</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="confirmPasswordEdit">Confirm Password</string>
    <string name="alreadyUser">Already an User ?</string>
    <string name="signUpSucess">Sign up Successful</string>
    <string name="signUpFail">Sign up Failed</string>
    <string name="pleaseCheck">Please check your inputs</string>
    <string name="getStarted">Get Started</string>
    <string name="helloText">Hi! </string>
    <string name="where_to_go">Where are you going?</string>
    <string name="searchBar">Search Country or City</string>
    <string name="all">All</string>
    <string name="personalRecommendations">Personal Recommendations</string>
    <string name="Featured">Featured</string>
    <string name="destinationQues">What type of destinations do you prefer?</string>
    <string name="beaches">Beaches</string>
    <string name="mountains">Mountains</string>
    <string name="cities">Cities</string>
    <string name="countryside">Countryside</string>
    <string name="historicalSites">Historical sites</string>
    <string name="continueD">Continue</string>
    <string name="activityQues">What type of activities do you prefer?</string>
    <string name="adventureSports">Adventure Sports</string>
    <string name="culturalExperiences">Cultural Experiences</string>
    <string name="relaxation">Relaxation and Wellness</string>
    <string name="food">Food and Dining</string>
    <string name="shopping">Shopping</string>
    <string name="nature">Nature and Wildlife</string>
    <string name="travelQues">Who are you travelling with?</string>
    <string name="single">Single</string>
    <string name="couple">Couple</string>
    <string name="family">Family</string>
    <string name="friends">Friends</string>
    <string name="group">Group</string>
    <string name="climateQues">What climate do you prefer?</string>
    <string name="tropical">Tropical</string>
    <string name="temperate">Temperate</string>
    <string name="cold">Cold</string>
    <string name="hot">Hot</string>
    <string name="descriptionRecommendation">Destination Title</string>
    <string name="locationRecommendation">Location</string>
    <string name="addRecommendation">Add</string>
    <string name="descriptionE">Description of the destination goes here.</string>
    <string name="delete_button">delete button</string>
    <string name="wishlistTitle">Wishlist</string>
    <string name="itemRemoved">Item removed from Wishlist</string>
    <string name="addedWishlist">Added to the Wishlist</string>
    <string name="userLog">User not logged in</string>
    <string name="mapLocationBack">Back to Location Discovery</string>
    <string name="googleMapsButton">Show on Google Maps</string>
    <string name="preview">Preview</string>
    <string name="heart_icon">Add to Wishlist</string>
    <string name="errorLoading">Error loading data</string>
    <string name="noData">No data available</string>
    <string name="personalizedRecommendation">Here are your personalized recommendations: </string>
    <string name="errorModel">Error loading model or data</string>
    <string name="errorInference">Error during inference</string>
    <string name="settings">Settings</string>
    <string name="go_back_icon">Go back icon</string>
    <string name="accountPrivacy">Account Privacy</string>
    <string name="accountPrivacyIcon">Account Privacy Icon</string>
    <string name="notification">Notification</string>
    <string name="notificationIcon">Notification Icon</string>
    <string name="language">Language</string>
    <string name="languageIcon">Language Icon</string>
    <string name="theme">Theme</string>
    <string name="themeIcon">Theme Icon</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="deleteAccountIcon">Delete Account Icon</string>
    <string name="changeLanguageDialog">Change Language</string>
    <string name="changeLanguageMessage">To change the language, please go to the system settings.</string>
    <string name="gotoSettings">Go to Settings</string>
    <string name="cancel">Cancel</string>
    <string name="chooseTheme">Choose Theme</string>
    <string name="deleteMessage">Are you sure you want to delete your account?</string>
    <string name="profile">Profile</string>
    <string name="profile_img">Profile image icon</string>
    <string name="editProfile">Edit Profile</string>
    <string name="settingsTextView">Settings</string>
    <string name="settingsImageView">Settings icon</string>
    <string name="myTrips">My Trips</string>
    <string name="myTripsIcon">My Trips icon</string>
    <string name="itinerary">Itinerary</string>
    <string name="itineraryIcon">Itinerary icon</string>
    <string name="changePassword">Change Password</string>
    <string name="changePasswordIcon">Change Password icon</string>
    <string name="help">Help and Support</string>
    <string name="helpIcon">Help and Support icon</string>
    <string name="logout">Logout</string>
    <string name="logoutIcon">Logout icon</string>
    <string name="editProfileHeading">Edit profile</string>
    <string name="fullNameEditText">Fullname</string>
    <string name="genderEditText">Gender</string>
    <string name="dobEditText">Date of Birth </string>
    <string name="phoneNumberEditText">Phone Number</string>
    <string name="emailEditText">Email</string>
    <string name="saveEditProfile">Save</string>
    <string-array name="genderArray">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="changePasswordTextView">Change Password</string>
    <string name="createNewPassword">Create new password</string>
    <string name="contentChange">Your new password must be different from previous password</string>
    <string name="enterPasswordTextView">Enter the password:</string>
    <string name="enterPasswordEditText">Enter new password</string>
    <string name="confirmPasswordTextView">Confirm password:</string>
    <string name="confirmPasswordEditText">Re-enter the password</string>
    <string name="resetPassword">Reset Password</string>
    <string name="fillFields">Please fill in all fields</string>
    <string name="passwordNotMatch">Passwords do not match</string>
    <string name="passwordChanged">Password changed successfully</string>
    <string name="failedPasswordChange">Failed to change password</string>
    <string name="helpTextView">Help and Support</string>
    <string name="intro">Welcome to our Help and Support section!
        We\'re here to ensure you have a smooth and enjoyable experience using our travel planning app.
        Whether you need assistance with booking, itinerary planning, or managing your account,
        our comprehensive resources and dedicated support team are ready to help.</string>
    <string name="feedbackMessage">Your feedback is important to us. Let us know what you think and how we can make our app better for you.</string>
    <string name="feedbackDialogTitle">Feedback</string>
    <string name="feedbacKSubmit">Submit</string>
    <string name="feedbackToast">Feedback Received:</string>
    <string name="faqHeading">Frequently Asked Questions (FAQs)</string>
    <string name="faqContent">Find quick answers to common questions about using our app, booking trips,
        managing your profile, and more.</string>
    <string name="question1">How to use this app?</string>
    <string name="answer1">You need to log in first. Upon successful login, you will be redirected to the homepage.
        Once there, you can manually search for your destination,or fill in a questionnaire to receive personalized recommendations.
        Initially, you will select your destination, followed by choosing activities, indicating the number of people traveling, and specifying the climate.
        Based on this information, you will be given recommendations.</string>
    <string name="question2">Can I search the destination manually?</string>
    <string name="answer2">Yes, you can search for destinations manually by using our search bar at the top of the page. </string>
    <string name="question3">How do I create a travel itinerary?</string>
    <string name="answer3">You can create itinerary by clicking on the add button entering the place and date, then clicking on the entry you will
        be redirected to detailed view which will give you options to add details for different days based on morning,afternoon and evening.</string>
    <string name="contactUsHeading">Contact Us</string>
    <string name="contactUsContent">If you need personalized assistance,
        feel free to reach out to our support team.
        We\'re available via email, chat, or phone to help you with any inquiries
        or issues you may encounter.
    </string>
    <string name="phoneImageView">phone logo</string>
    <string name="phoneNumber">+1 435 657 8910</string>
    <string name="emailImageView">mail logo</string>
    <string name="email">travel@gmail.com</string>
    <string name="feedbackHeading">Feedback</string>
    <string name="feedbackEditText">Enter your feedback here</string>
    <string name="outro">Thank you for choosing our app for your travel adventures.
        We\'re here to support you every step of the way!</string>
    <string name="accountHeading">Account Privacy</string>
    <string name="third_party">Allow sharing your data with third-party services  </string>
    <string name="receive_emails">Receive promotional emails about special offers </string>
    <string name="savePreferences">Save</string>
    <string name="saveMessageAP">Account Privacy settings saved</string>
    <string name="notificationsHeading">Notification</string>
    <string name="pushNotifications">Push Notifications</string>
    <string name="reminders_toggle">Reminders</string>
    <string name="trending_places">Trending Places</string>
    <string name="emailNotifications">Email Notifications</string>
    <string name="feedback_toggle">Feedback Emails</string>
    <string name="support_toggle">Support Emails</string>
    <string name="saveNotificationsPref">Save</string>
    <string name="itineraryTitle">Itinerary</string>
    <string name="add_button_text">Add</string>
    <string name="addItineraryTitle">Title</string>
    <string name="addItineraryDate">Date</string>
    <string name="addItinerarySave">Save</string>
    <string name="scrollViewTitle">Default Title</string>
    <string name="scrollViewDate">Default Date</string>
    <string name="scrollViewDescription">Scroll View</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>