<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TravelWithSelectionActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personalRecommendations"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/travelTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travelQues"
        android:layout_below="@id/textView"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp" />

    <!-- Grid Layout for Travel With -->
    <GridLayout
        android:id="@+id/travelWithGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/travelTypeText"
        android:layout_marginTop="16dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="3"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <!-- Single -->
        <LinearLayout
            android:id="@+id/single"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/selection_tile_bg"
            android:clickable="true"
            android:focusable="true">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="10dp"
                android:src="@drawable/single"
                app:shapeAppearanceOverlay="@style/RoundedSquare"
                android:clickable="false"
                android:focusable="false" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/single"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>

        <!-- Couple -->
        <LinearLayout
            android:id="@+id/couple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/selection_tile_bg"
            android:clickable="true"
            android:focusable="true">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/couple"
                app:shapeAppearanceOverlay="@style/RoundedSquare"
                android:clickable="false"
                android:focusable="false"  />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/couple"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp" />
        </LinearLayout>

        <!-- Family -->
        <LinearLayout
            android:id="@+id/family"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"

            android:background="@drawable/selection_tile_bg"
            android:clickable="true"
            android:focusable="true">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/family"
                app:shapeAppearanceOverlay="@style/RoundedSquare"
                android:clickable="false"
                android:focusable="false" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>

        <!-- Friends -->
        <LinearLayout
            android:id="@+id/friends"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"

            android:background="@drawable/selection_tile_bg"
            android:clickable="true"
            android:focusable="true">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/friend"
                app:shapeAppearanceOverlay="@style/RoundedSquare"
                android:clickable="false"
                android:focusable="false"  />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp" />
        </LinearLayout>

        <!-- Group -->
        <LinearLayout
            android:id="@+id/group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"

            android:background="@drawable/selection_tile_bg"
            android:clickable="true"
            android:focusable="true">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/group"
                app:shapeAppearanceOverlay="@style/RoundedSquare"
                android:clickable="false"
                android:focusable="false"  />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>

    </GridLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/travelWithGrid"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        />

    <!-- Continue Button -->
    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueD"
        android:layout_below="@id/travelWithGrid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:enabled="false" />

</RelativeLayout>
