<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeaturedActivity">

    <LinearLayout
        android:id="@+id/hiWithUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/hello_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helloText"
            android:textSize="24sp"
            android:paddingEnd="8dp"/>

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/where_to_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/where_to_go"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/hiWithUsername"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white_bg_search"
        android:elevation="10dp"
        app:iconifiedByDefault="false"
        app:queryHint="Search Country or City"
        app:layout_constraintTop_toBottomOf="@id/where_to_go"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp" />

    <HorizontalScrollView
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/tabFeatured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/Featured"
                android:backgroundTint="@color/black"
                android:textColor="@android:color/white"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/tabRecommended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personalRecommendations"
                android:textColor="@android:color/white"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/tabAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textColor="@android:color/white"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/navBar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:paddingBottom="40dp"
        />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/bottom_nav_bg"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:labelVisibilityMode="unlabeled"
        app:itemIconTint="@color/white"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginBottom="16dp"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconSize="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
